# textractor-cli

./: .gitmodules  CMakeLists.txt  main.cpp
